force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Policy_Proposal_Cert_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Proposal_Cert_Claim_Number__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Policy Proposal Cert Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>