force-app/main/default/objects/ABSLI_Case_Detail__c/fields/PX_Response__c.field-meta.xml
<CustomField>
    <fullName>PX_Response__c</fullName>
    <label>PX Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>