force-app/main/default/objects/ABSLI_Case_Detail__c/fields/RCA_Comments__c.field-meta.xml
<CustomField>
    <fullName>RCA_Comments__c</fullName>
    <label>RCA Comments</label>
    <type>TextArea</type>
</CustomField>