force-app/main/default/objects/ABSLI_Case_Detail__c/fields/RCA_department__c.field-meta.xml
<CustomField>
    <fullName>RCA_department__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>RCA department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Branch Ops</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Customer Perception</fullName>
            </value>
            <value>
                <fullName>EMT</fullName>
            </value>
            <value>
                <fullName>Hoax Call</fullName>
            </value>
            <value>
                <fullName>IGMS/NCH/DRPG</fullName>
            </value>
            <value>
                <fullName>IMT</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Misselling Only</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Policy Issuance</fullName>
            </value>
            <value>
                <fullName>Policy Servicing</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Revenue Assurance</fullName>
            </value>
            <value>
                <fullName>Sales Member Advisor</fullName>
            </value>
            <value>
                <fullName>Service Assurance</fullName>
            </value>
            <value>
                <fullName>Spurious Call</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Vendors</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>