force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Re_Open_Comments__c.field-meta.xml
<CustomField>
    <fullName>Re_Open_Comments__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Re-Open Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>