force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABSLI services issues</fullName>
            </value>
            <value>
                <fullName>Advised by my fund manager</fullName>
            </value>
            <value>
                <fullName>Any other</fullName>
            </value>
            <value>
                <fullName>Branch issue- no branch nearby/ very far</fullName>
            </value>
            <value>
                <fullName>Children&apos;s higher education</fullName>
            </value>
            <value>
                <fullName>Children&apos;s marriage</fullName>
            </value>
            <value>
                <fullName>Elderly person- no source of income</fullName>
            </value>
            <value>
                <fullName>Financial reason</fullName>
            </value>
            <value>
                <fullName>High Charges</fullName>
            </value>
            <value>
                <fullName>Lack of understanding of the product feature</fullName>
            </value>
            <value>
                <fullName>Long time in policy- want to surrender</fullName>
            </value>
            <value>
                <fullName>Loss in business</fullName>
            </value>
            <value>
                <fullName>Low returns</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Medical need</fullName>
            </value>
            <value>
                <fullName>Non fulfilment of purpose of insurance</fullName>
            </value>
            <value>
                <fullName>Personal reason</fullName>
            </value>
            <value>
                <fullName>Premium paying term over</fullName>
            </value>
            <value>
                <fullName>Purchase of home</fullName>
            </value>
            <value>
                <fullName>Purchase of new plan from other insurer</fullName>
            </value>
            <value>
                <fullName>Studies</fullName>
            </value>
            <value>
                <fullName>Too many policies to manage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>