force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reason_for_Delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Delay__c</fullName>
    <label>Reason for Delay</label>
    <type>TextArea</type>
</CustomField>