force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reason_For_non_Contactability_Close_Loop__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_non_Contactability_Close_Loop__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Reason For non Contactability Close Loop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy/Engaged</fullName>
            </value>
            <value>
                <fullName>Ringing/No Response</fullName>
            </value>
            <value>
                <fullName>Switched Off/Unavailable</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>No Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>