force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reason_for_noncontactability_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_noncontactability_Acknowledge__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Reason for noncontactability Acknowledge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>