force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reason_for_repeat__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_repeat__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Reason for repeat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptance of Offer</fullName>
            </value>
            <value>
                <fullName>Incorrect Resolution</fullName>
            </value>
            <value>
                <fullName>Complaint logged to multiple sources</fullName>
            </value>
            <value>
                <fullName>Incomplete resolution</fullName>
            </value>
            <value>
                <fullName>Reminders received within TAT</fullName>
            </value>
            <value>
                <fullName>Not Satisfied with Resolution</fullName>
            </value>
            <value>
                <fullName>Communication not received</fullName>
            </value>
            <value>
                <fullName>Delay in resolution</fullName>
            </value>
            <value>
                <fullName>Penal Interest/ TDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>