force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>