force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reimbursment_amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursment_amount__c</fullName>
    <label>Reimbursment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>