force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reinstatement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Amount__c</fullName>
    <label>Reinstatement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>