force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reopen_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Comments__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Reopen Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>