force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Reopened Date</label>
    <type>Date</type>
</CustomField>