force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Requested_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Loan_Amount__c</fullName>
    <description>This is used in Loan Repayment Process</description>
    <label>Requested Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>