force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution Comments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque payout processed and would be dispatched within next 4 working days</fullName>
            </value>
            <value>
                <fullName>Email sent to Customer</fullName>
            </value>
            <value>
                <fullName>Informatory email/letter</fullName>
            </value>
            <value>
                <fullName>Letter sent to customer</fullName>
            </value>
            <value>
                <fullName>NEFT payout processed and it will be credited to the customer’s account within next 5 working days</fullName>
            </value>
            <value>
                <fullName>Policy has been reinstated</fullName>
            </value>
            <value>
                <fullName>Request has been processed</fullName>
            </value>
            <value>
                <fullName>Age Proof not clear</fullName>
            </value>
            <value>
                <fullName>Age Proof not submitted</fullName>
            </value>
            <value>
                <fullName>Assignment for a MWP policy not allowed</fullName>
            </value>
            <value>
                <fullName>Assignment form is incomplete</fullName>
            </value>
            <value>
                <fullName>Assignment form is not duly signed by the witness</fullName>
            </value>
            <value>
                <fullName>Assignment form not submitted</fullName>
            </value>
            <value>
                <fullName>Assignment is not for a MWP policy</fullName>
            </value>
            <value>
                <fullName>Bank Account Details in cheque/passbook and request form is not matching</fullName>
            </value>
            <value>
                <fullName>Board resolution is not received</fullName>
            </value>
            <value>
                <fullName>Cancelled cheque not clear</fullName>
            </value>
            <value>
                <fullName>Cancelled cheque not submitted</fullName>
            </value>
            <value>
                <fullName>Case pending for investigation with grievance team, resolution will be provided by the grievance t</fullName>
            </value>
            <value>
                <fullName>Certificate of Insurability for Top up is not submitted</fullName>
            </value>
            <value>
                <fullName>Cheque already encashed</fullName>
            </value>
            <value>
                <fullName>COVID Questionnaire is not clear</fullName>
            </value>
            <value>
                <fullName>COVID Questionnaire is not submitted</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Deed of Relinquishment is incomplete/not received</fullName>
            </value>
            <value>
                <fullName>Details already available</fullName>
            </value>
            <value>
                <fullName>Discrepancy in Certificate of Insurability</fullName>
            </value>
            <value>
                <fullName>DOB on the Photo id proof and the DOB proof submitted does not match</fullName>
            </value>
            <value>
                <fullName>Duplicate request received</fullName>
            </value>
            <value>
                <fullName>Incomplete NRI details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>