force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>