force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolution_Feedback_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Feedback_Remarks__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Resolution Feedback Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>