force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolution_Satisfaction_Level__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Satisfaction_Level__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Resolution Satisfaction Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Poor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Average</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Good</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Excellent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>