force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolve_case__c.field-meta.xml
<CustomField>
    <fullName>Resolve_case__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Resolve case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>