force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Resolved Date</label>
    <type>Date</type>
</CustomField>