force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Resolved_settled_status__c.field-meta.xml
<CustomField>
    <fullName>Resolved_settled_status__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Resolved settled status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infavour</fullName>
            </value>
            <value>
                <fullName>Partialy Favour</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>