force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Retention_value__c.field-meta.xml
<CustomField>
    <fullName>Retention_value__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Retention value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>