force-app/main/default/objects/ABSLI_Case_Detail__c/fields/RTGS_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>RTGS_Reference_Number__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>RTGS Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>