force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Screening_Date__c.field-meta.xml
<CustomField>
    <fullName>Screening_Date__c</fullName>
    <description>IGMS Field</description>
    <label>Screening Date</label>
    <type>Date</type>
</CustomField>