force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Send_To_UW__c.field-meta.xml
<CustomField>
    <fullName>Send_To_UW__c</fullName>
    <label>Send To UW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>