force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Source_Request_submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Source_Request_submitted_by__c</fullName>
    <label>Source (Request submitted by)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RQ</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Represent</fullName>
            </value>
            <value>
                <fullName>Sales Represent</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>CAMS</fullName>
            </value>
            <value>
                <fullName>Early Payouts</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>