force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Status_Valid_For_STP__c.field-meta.xml
<CustomField>
    <fullName>Status_Valid_For_STP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in conditional STP.</description>
    <label>Status Valid For STP</label>
    <type>Checkbox</type>
</CustomField>