force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>TextArea</type>
</CustomField>