force-app/main/default/objects/ABSLI_Case_Detail__c/fields/TAT_Crossed_Remark__c.field-meta.xml
<CustomField>
    <fullName>TAT_Crossed_Remark__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>TAT Crossed Remark</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>