force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Tax_Indentity_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Indentity_Number__c</fullName>
    <label>Tax Indentity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>