force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Tax_Residence_of_other_country__c.field-meta.xml
<CustomField>
    <fullName>Tax_Residence_of_other_country__c</fullName>
    <label>Tax Residence of other country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>