force-app/main/default/objects/ABSLI_Case_Detail__c/fields/TDS_Indicator__c.field-meta.xml
<CustomField>
    <fullName>TDS_Indicator__c</fullName>
    <label>TDS Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>