force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Touch_Point_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point_Received_Date__c</fullName>
    <description>IGMS Field</description>
    <label>Touch Point Received Date</label>
    <type>Date</type>
</CustomField>