force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Transaction Id to be captured for ABSLI Cases coming from Customer Portal</description>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>