force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Type_of_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Disposal__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Type of Disposal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Infavor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Partially favor</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Reject</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>