force-app/main/default/objects/ABSLI_Case_Detail__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>