force-app/main/default/objects/ABSLI_Case_Detail__c/fields/UW_Comments__c.field-meta.xml
<CustomField>
    <fullName>UW_Comments__c</fullName>
    <label>UW Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>