force-app/main/default/objects/ABSLI_Case_Detail__c/fields/UW_Decision__c.field-meta.xml
<CustomField>
    <fullName>UW_Decision__c</fullName>
    <label>UW Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected/Decline</fullName>
            </value>
            <value>
                <fullName>Requirement Raised/Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>