force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Voice_Verification__c.field-meta.xml
<CustomField>
    <fullName>Voice_Verification__c</fullName>
    <label>Voice Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>