force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Voucher_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Approval_Date__c</fullName>
    <label>Voucher Approval Date</label>
    <type>Date</type>
</CustomField>