force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <label>Voucher Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>