force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Waiver_percentage__c.field-meta.xml
<CustomField>
    <fullName>Waiver_percentage__c</fullName>
    <label>Waiver percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>