force-app/main/default/objects/ABSLI_Case_Detail__c/fields/WhatsApp_Opt_Out_Indicator__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Opt_Out_Indicator__c</fullName>
    <label>WhatsApp Opt Out Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>