force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Withdrawal_Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Amount_Available__c</fullName>
    <label>Withdrawal Amount Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>