force-app/main/default/objects/ABSLI_Case_Detail__c/validationRules/Claimant_Mobile_Number_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Claimant_Mobile_Number_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Claimant_Mobile_Number__c != &apos;&apos;,NOT(REGEX(Claimant_Mobile_Number__c, &quot;^[0-9]{2,15}$&quot;)))</errorConditionFormula>
    <errorDisplayField>Claimant_Mobile_Number__c</errorDisplayField>
    <errorMessage>Claimant Mobile Number should only have numbers.</errorMessage>
</ValidationRule>