force-app/main/default/objects/ABSLI_Case_Detail__c/validationRules/IGMS_Synched_Policy_Type_change_val.validationRule-meta.xml
<ValidationRule>
    <fullName>IGMS_Synched_Policy_Type_change_val</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(IGMS_type_of_policy__c) &amp;&amp; !ISNEW() &amp;&amp;  IRDAI_Token_Number__c != null</errorConditionFormula>
    <errorMessage>Policy Type cannot be changed for IGMS Synced Cases</errorMessage>
</ValidationRule>