force-app/main/default/objects/ABSLI_Case_Detail__c/validationRules/OR_Number_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OR_Number_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR_Number__c != &apos;&apos;,NOT(REGEX(OR_Number__c , &quot;^[0-9]{9}$&quot;)))</errorConditionFormula>
    <errorDisplayField>OR_Number__c</errorDisplayField>
    <errorMessage>OR Number should be 9 digit numbers</errorMessage>
</ValidationRule>