force-app/main/default/objects/ABSLI_Case_Detail__c/validationRules/Req_Loan_is_greater_than_max_loan.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Loan_is_greater_than_max_loan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()), 
    ISCHANGED( Requested_Loan_Amount__c ), 
    Requested_Loan_Amount__c &gt;  Max_Loan_Amount__c 
)</errorConditionFormula>
    <errorMessage>Requested Loan amount cannot be greater than Maximum Loan amount.</errorMessage>
</ValidationRule>