force-app/main/default/objects/ABSLI_Case_Detail__c/validationRules/Req_Loan_is_less_than_min_loan.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Loan_is_less_than_min_loan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()), 
    ISCHANGED( Requested_Loan_Amount__c ), 
    Requested_Loan_Amount__c &lt;  Min_Loan_Amount__c 
)</errorConditionFormula>
    <errorMessage>Requested Loan amount cannot be less than Minimum Loan amount.</errorMessage>
</ValidationRule>